tests/should-fail/semantics/native-as-code.j
native TriggerSyncStart takes nothing returns nothing

function foo takes nothing returns nothing
    local code bla = function TriggerSyncStart
endfunction
